--- a/little_dinosaur_jump.BLL/little_dinosaur_jump.BLL.csproj
+++ b/little_dinosaur_jump.BLL/little_dinosaur_jump.BLL.csproj
@@ -49,6 +49,7 @@
   <ItemGroup>
     <Compile Include="LoginBLL.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="UserScoreBLL.cs" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\Common\Common.csproj">
