--- a/little_dinosaur_jump/App.config
+++ b/little_dinosaur_jump/App.config
@@ -1,9 +1,15 @@
 ﻿<?xml version="1.0" encoding="utf-8" ?>
 <configuration>
+    <configSections>
+    </configSections>
     <startup> 
         <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.7.2" />
     </startup>
 	<connectionStrings>
-		<add name="MyDbContext" connectionString="metadata=res://*/Model1.csdl|res://*/Model1.ssdl|res://*/Model1.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=centos7server;initial catalog=little_dinosaur;persist security info=True;user id=sa;password=lzy@040522;encrypt=False;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
-	</connectionStrings>
+  <add name="MyDbContext" connectionString="metadata=res://*/Model1.csdl|res://*/Model1.ssdl|res://*/Model1.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=centos7server;initial catalog=little_dinosaur;persist security info=True;user id=sa;password=lzy@040522;encrypt=False;MultipleActiveResultSets=True;App=EntityFramework&quot;"
+   providerName="System.Data.EntityClient" />
+  <add name="little_dinosaur_jump.Properties.Settings.little_dinosaurConnectionString"
+   connectionString="Data Source=centos7server;Initial Catalog=little_dinosaur;Persist Security Info=True;User ID=sa;Password=lzy@040522;Encrypt=False"
+   providerName="System.Data.SqlClient" />
+ </connectionStrings>
 </configuration>
