小恐龙1.0 实现了商店功能，可以购买和使用复活币，分数转积分的功能

--- a/little_dinosaur_jump.BLL/little_dinosaur_jump.BLL.csproj
+++ b/little_dinosaur_jump.BLL/little_dinosaur_jump.BLL.csproj
@@ -49,6 +49,7 @@
   <ItemGroup>
     <Compile Include="LoginBLL.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="StoreBLL.cs" />
     <Compile Include="UserScoreBLL.cs" />
   </ItemGroup>
   <ItemGroup>
