--- a/Model/Model.csproj
+++ b/Model/Model.csproj
@@ -73,6 +73,9 @@
     <Compile Include="Score.cs">
       <DependentUpon>Model1.tt</DependentUpon>
     </Compile>
+    <Compile Include="Store.cs">
+      <DependentUpon>Model1.tt</DependentUpon>
+    </Compile>
   </ItemGroup>
   <ItemGroup>
     <EntityDeploy Include="Model1.edmx">
