--- a/_config.yml
+++ b/_config.yml
@@ -1,3 +1,3 @@
-remote_theme: pages-themes/merlot@v0.2.0
-plugins:
-- jekyll-remote-theme # add this line to the plugins list if you already have one
+title: "小恐龙快跑"
+description: "一个模仿 Chrome 离线游戏的 Windows 应用程序"
+url: "https://your-github-username.github.io"
